Add more key names to QKeySequence.

So that, for example,

qDebug() << QKeySequence(Qt::Key_Cancel).toString();

prints "Cancel" instead of "ᡀ".

Task-number: QTBUG-953

Change-Id: Ib17fc314fd018355e6a1826d26fce85fdcbbe0c8
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>